// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action Creator: Sending Domains Create domain should be assigned a subaccount 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "domain": "domain.com",
      "shared_with_subaccounts": false,
    },
    "headers": Object {
      "x-msys-subaccount": 101,
    },
    "method": "POST",
    "url": "/sending-domains",
  },
  "type": "CREATE_SENDING_DOMAIN",
}
`;

exports[`Action Creator: Sending Domains Create domain should be assigned to master 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "domain": "domain.com",
      "shared_with_subaccounts": false,
    },
    "headers": Object {},
    "method": "POST",
    "url": "/sending-domains",
  },
  "type": "CREATE_SENDING_DOMAIN",
}
`;

exports[`Action Creator: Sending Domains Create domain should be shared with all subaccount 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "domain": "domain.com",
      "shared_with_subaccounts": true,
    },
    "headers": Object {},
    "method": "POST",
    "url": "/sending-domains",
  },
  "type": "CREATE_SENDING_DOMAIN",
}
`;

exports[`Action Creator: Sending Domains Update it should request with correct post data 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "is_default_bounce_domain": true,
    },
    "headers": Object {},
    "method": "PUT",
    "url": "/sending-domains/domain.com",
  },
  "type": "UPDATE_SENDING_DOMAIN",
}
`;

exports[`Action Creator: Sending Domains Verify it should request with correct post data 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "cname_verify": true,
    },
    "headers": Object {},
    "method": "POST",
    "url": "/sending-domains/domain.com/verify",
  },
  "type": "VERIFY_SENDING_DOMAIN",
}
`;
